# fast-api-template

./: Dockerfile  pyproject.toml
